--- a/EstructuraDeDatosLab#1/src/estructuradedatoslab/pkg1/medicos_funciones/MedicosPage.fxml
+++ b/EstructuraDeDatosLab#1/src/estructuradedatoslab/pkg1/medicos_funciones/MedicosPage.fxml
@@ -1,11 +1,79 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import java.net.URL?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="estructuradedatoslab.pkg1.medicos_funciones.MedicosPageController">
-    
-</AnchorPane>
+<BorderPane fx:id="pn" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1088.0" styleClass="backgroundColor" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="estructuradedatoslab.pkg1.pacientes_funciones.PacientespageController">
+   <left>
+      <VBox alignment="CENTER" prefHeight="720.0" prefWidth="130.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button mnemonicParsing="false" onAction="#btnAgregarCita" prefHeight="30.0" prefWidth="90.0" style="-fx-background-color: #ffffff; -fx-background-radius: 20px;" text="Agregar cita" />
+            <Separator opacity="0.0" prefHeight="29.0" prefWidth="130.0" />
+            <Button mnemonicParsing="false" onAction="#consulte" prefHeight="30.0" prefWidth="90.0" style="-fx-background-color: #ffffff; -fx-background-radius: 20px;" text="Consultar" />
+            <Separator opacity="0.0" prefHeight="26.0" prefWidth="130.0" />
+            <Button mnemonicParsing="false" onAction="#back" prefHeight="30.0" prefWidth="90.0" style="-fx-background-color: #ffffff; -fx-background-radius: 20px;" text="volver" />
+         </children>
+      </VBox>
+   </left>
+   <center>
+      <Pane fx:id="pc" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <Pane layoutX="1.0" layoutY="2.0" prefHeight="717.0" prefWidth="897.0" />
+            <Pane layoutX="8.0" layoutY="25.0" prefHeight="680.0" prefWidth="937.0" style="-fx-background-color: #ffffff; -fx-background-radius: 25px;">
+               <children>
+                  <Pane layoutX="24.0" layoutY="67.0" prefHeight="9.0" prefWidth="880.0" style="-fx-background-radius: 30px;" styleClass="backgroundColor" stylesheets="@../background.css" />
+                  <Label alignment="CENTER" layoutX="337.0" layoutY="27.0" prefHeight="45.0" prefWidth="309.0" text="AGREGAR MEDICO">
+                     <font>
+                        <Font name="Arial Black" size="30.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="setNombre" layoutX="98.0" layoutY="175.0" prefHeight="26.0" prefWidth="250.0" />
+                  <TextField fx:id="setIdentificacion" layoutX="126.0" layoutY="251.0" prefHeight="26.0" prefWidth="221.0" />
+                  <Label layoutX="39.0" layoutY="179.0" text="Nombre:" />
+                  <Label layoutX="39.0" layoutY="256.0" text="Identificación:" />
+                  <Label layoutX="404.0" layoutY="187.0" text="Especialidad:" />
+                  <TableView fx:id="tblPacientesAgr" layoutX="34.0" layoutY="299.0" prefHeight="349.0" prefWidth="871.0" style="-fx-background-color: #ffffff;">
+                     <columns>
+                        <TableColumn fx:id="colIdentificacion" prefWidth="114.0" text="Identificacion" />
+                        <TableColumn fx:id="colNombre" prefWidth="183.0" text="Nombre" />
+                        <TableColumn fx:id="colApellido" minWidth="2.0" prefWidth="170.0" text="Telefono" />
+                        <TableColumn fx:id="colEspecialidad" minWidth="0.0" prefWidth="232.0" text="Especialidad" />
+                        <TableColumn fx:id="colMedicoAsignado" prefWidth="171.0" text="Numeros de citas" />
+                     </columns>
+                  </TableView>
+                  <Button layoutX="399.0" layoutY="226.0" mnemonicParsing="false" onAction="#btnAñadirMedico" prefHeight="56.0" prefWidth="283.0" style="-fx-background-radius: 15px;" styleClass="backgroundColor3" stylesheets="@../background.css" text="AÑADIR MEDICO" textFill="#6b6b6b">
+                     <font>
+                        <Font name="Avenir Black" size="13.0" />
+                     </font>
+                  </Button>
+                  <ImageView fitHeight="186.0" fitWidth="197.0" layoutX="714.0" layoutY="119.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../Image/pacient.png" />
+                     </image>
+                  </ImageView>
+                  <ChoiceBox fx:id="setespecialidad" layoutX="485.0" layoutY="182.0" prefHeight="26.0" prefWidth="195.0" />
+                  <Label layoutX="38.0" layoutY="217.0" prefHeight="17.0" prefWidth="55.0" text="Telefono:" />
+                  <TextField fx:id="setTelefono" layoutX="100.0" layoutY="213.0" prefHeight="26.0" prefWidth="248.0" />
+               </children>
+            </Pane>
+            <Pane layoutX="32.0" layoutY="43.0" prefHeight="9.0" prefWidth="880.0" style="-fx-background-radius: 30px;" styleClass="backgroundColor" stylesheets="@../background.css" />
+         </children>
+      </Pane>
+   </center>
+   <stylesheets>
+      <URL value="@../pacientes_funciones/background.css" />
+      <URL value="@../background.css" />
+   </stylesheets>
+</BorderPane>
