--- a/EstructuraDeDatosLab#1/src/estructuradedatoslab/pkg1/medicos_funciones/MedicosPage.fxml
+++ b/EstructuraDeDatosLab#1/src/estructuradedatoslab/pkg1/medicos_funciones/MedicosPage.fxml
@@ -3,7 +3,6 @@
 <?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
@@ -20,11 +19,11 @@
    <left>
       <VBox alignment="CENTER" prefHeight="720.0" prefWidth="130.0" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" onAction="#btnAgregarCita" prefHeight="30.0" prefWidth="90.0" style="-fx-background-color: #ffffff; -fx-background-radius: 20px;" text="Agregar cita" />
+            <Button mnemonicParsing="false" onAction="#btnAgregarMedico" prefHeight="30.0" prefWidth="120.0" style="-fx-background-color: #ffffff; -fx-background-radius: 20px;" text="Agregar Medico" />
             <Separator opacity="0.0" prefHeight="29.0" prefWidth="130.0" />
-            <Button mnemonicParsing="false" onAction="#consulte" prefHeight="30.0" prefWidth="90.0" style="-fx-background-color: #ffffff; -fx-background-radius: 20px;" text="Consultar" />
+            <Button mnemonicParsing="false" onAction="#consulteM" prefHeight="30.0" prefWidth="119.0" style="-fx-background-color: #ffffff; -fx-background-radius: 20px;" text="Consultar" />
             <Separator opacity="0.0" prefHeight="26.0" prefWidth="130.0" />
-            <Button mnemonicParsing="false" onAction="#back" prefHeight="30.0" prefWidth="90.0" style="-fx-background-color: #ffffff; -fx-background-radius: 20px;" text="volver" />
+            <Button mnemonicParsing="false" onAction="#back" prefHeight="30.0" prefWidth="124.0" style="-fx-background-color: #ffffff; -fx-background-radius: 20px;" text="volver" />
          </children>
       </VBox>
    </left>
@@ -35,29 +34,26 @@
             <Pane layoutX="8.0" layoutY="25.0" prefHeight="680.0" prefWidth="937.0" style="-fx-background-color: #ffffff; -fx-background-radius: 25px;">
                <children>
                   <Pane layoutX="24.0" layoutY="67.0" prefHeight="9.0" prefWidth="880.0" style="-fx-background-radius: 30px;" styleClass="backgroundColor" stylesheets="@../background.css" />
-                  <Label alignment="CENTER" layoutX="339.0" layoutY="27.0" prefHeight="45.0" prefWidth="279.0" text="AGREGAR CITA">
+                  <Label alignment="CENTER" layoutX="305.0" layoutY="27.0" prefHeight="45.0" prefWidth="325.0" text="AGREGAR MEDICO">
                      <font>
                         <Font name="Arial Black" size="30.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="setNombre" layoutX="98.0" layoutY="128.0" prefHeight="26.0" prefWidth="250.0" />
-                  <TextField fx:id="setIdentificacion" layoutX="126.0" layoutY="204.0" prefHeight="26.0" prefWidth="221.0" />
-                  <Label layoutX="45.0" layoutY="132.0" text="Nombre:" />
-                  <Label layoutX="45.0" layoutY="208.0" text="Identificación:" />
-                  <Label layoutX="367.0" layoutY="140.0" text="Especialidad Solicitada" />
-                  <Label layoutX="47.0" layoutY="250.0" text="Fecha de la cita:" />
-                  <DatePicker fx:id="setFecha" layoutX="147.0" layoutY="247.0" prefHeight="26.0" prefWidth="200.0" />
+                  <TextField fx:id="setNombre" layoutX="98.0" layoutY="154.0" prefHeight="26.0" prefWidth="250.0" />
+                  <TextField fx:id="setIdentificacion" layoutX="126.0" layoutY="230.0" prefHeight="26.0" prefWidth="221.0" />
+                  <Label layoutX="45.0" layoutY="158.0" text="Nombre:" />
+                  <Label layoutX="45.0" layoutY="234.0" text="Identificación:" />
+                  <Label layoutX="396.0" layoutY="158.0" text="Especialidad:" />
                   <TableView fx:id="tblPacientesAgr" layoutX="34.0" layoutY="299.0" prefHeight="349.0" prefWidth="871.0" style="-fx-background-color: #ffffff;">
                      <columns>
                         <TableColumn fx:id="colIdentificacion" prefWidth="114.0" text="Identificacion" />
-                        <TableColumn fx:id="colNombre" prefWidth="122.0" text="Nombre" />
-                        <TableColumn fx:id="colApellido" minWidth="2.0" prefWidth="97.0" text="Apellido" />
-                        <TableColumn fx:id="colFechaCita" prefWidth="122.0" text="Fecha de la cita" />
-                        <TableColumn fx:id="colEspecialidad" minWidth="0.0" prefWidth="180.0" text="especialidad" />
-                        <TableColumn fx:id="colMedicoAsignado" prefWidth="235.0" text="Medico Asignado" />
+                        <TableColumn fx:id="colNombre" prefWidth="202.0" text="Nombre" />
+                        <TableColumn fx:id="colTelefono" minWidth="2.0" prefWidth="149.0" text="Telefono" />
+                        <TableColumn fx:id="colEspecialidad" minWidth="0.0" prefWidth="257.0" text="especialidad" />
+                        <TableColumn fx:id="colCitas" prefWidth="131.0" text="Numero de Citas" />
                      </columns>
                   </TableView>
-                  <Button layoutX="399.0" layoutY="226.0" mnemonicParsing="false" onAction="#btnAñadirCita" prefHeight="56.0" prefWidth="283.0" style="-fx-background-radius: 15px;" styleClass="backgroundColor3" stylesheets="@../background.css" text="AÑADIR CITA DEL PACIENTE" textFill="#6b6b6b">
+                  <Button layoutX="399.0" layoutY="226.0" mnemonicParsing="false" onAction="#btnAñadirMedico" prefHeight="56.0" prefWidth="283.0" style="-fx-background-radius: 15px;" styleClass="backgroundColor3" stylesheets="@../background.css" text="AÑADIR MEDICO" textFill="#6b6b6b">
                      <font>
                         <Font name="Avenir Black" size="13.0" />
                      </font>
@@ -67,11 +63,9 @@
                         <Image url="@../Image/pacient.png" />
                      </image>
                   </ImageView>
-                  <ChoiceBox fx:id="setespecialidad" layoutX="513.0" layoutY="136.0" prefWidth="150.0" />
-                  <ChoiceBox fx:id="SelcMedicos" layoutX="468.0" layoutY="179.0" prefHeight="26.0" prefWidth="195.0" />
-                  <Label layoutX="45.0" layoutY="170.0" text="Apellido:" />
-                  <TextField fx:id="setApellido" layoutX="100.0" layoutY="166.0" prefHeight="26.0" prefWidth="248.0" />
-                  <Label layoutX="367.0" layoutY="184.0" text="Medico Solicitado" />
+                  <ChoiceBox fx:id="setespecialidad" layoutX="470.0" layoutY="154.0" prefHeight="26.0" prefWidth="212.0" />
+                  <Label layoutX="45.0" layoutY="196.0" text="Telefono:" />
+                  <TextField fx:id="setTelefono" layoutX="100.0" layoutY="192.0" prefHeight="26.0" prefWidth="248.0" />
                </children>
             </Pane>
             <Pane layoutX="32.0" layoutY="43.0" prefHeight="9.0" prefWidth="880.0" style="-fx-background-radius: 30px;" styleClass="backgroundColor" stylesheets="@../background.css" />
