--- a/EstructuraDeDatosLab#1/src/estructuradedatoslab/pkg1/medicos_funciones/MedicosPage.fxml
+++ b/EstructuraDeDatosLab#1/src/estructuradedatoslab/pkg1/medicos_funciones/MedicosPage.fxml
@@ -1,79 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="pn" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1088.0" styleClass="backgroundColor" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="estructuradedatoslab.pkg1.pacientes_funciones.PacientespageController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1088.0" styleClass="backgroundColor" stylesheets="@../background.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="estructuradedatoslab.pkg1.medicos_funciones.MedicosPageController">
    <left>
-      <VBox alignment="CENTER" prefHeight="720.0" prefWidth="130.0" BorderPane.alignment="CENTER">
+      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="130.0" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" onAction="#btnAgregarMedico" prefHeight="30.0" prefWidth="120.0" style="-fx-background-color: #ffffff; -fx-background-radius: 20px;" text="Agregar Medico" />
+            <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="108.0" style="-fx-background-color: #ffffff; -fx-background-radius: 25px;" text="Agregar medico" />
             <Separator opacity="0.0" prefHeight="29.0" prefWidth="130.0" />
-            <Button mnemonicParsing="false" onAction="#consulteM" prefHeight="30.0" prefWidth="119.0" style="-fx-background-color: #ffffff; -fx-background-radius: 20px;" text="Consultar" />
-            <Separator opacity="0.0" prefHeight="26.0" prefWidth="130.0" />
-            <Button mnemonicParsing="false" onAction="#back" prefHeight="30.0" prefWidth="124.0" style="-fx-background-color: #ffffff; -fx-background-radius: 20px;" text="volver" />
-         </children>
-      </VBox>
+            <Button fx:id="abrirConsulta" mnemonicParsing="false" prefHeight="30.0" prefWidth="106.0" style="-fx-background-color: #ffffff; -fx-background-radius: 25px;" text="Consultar" />
+            <Separator opacity="0.0" prefHeight="29.0" prefWidth="130.0" />
+            <Button mnemonicParsing="false" onAction="#salir" prefHeight="30.0" prefWidth="106.0" style="-fx-background-color: #ffff; -fx-background-radius: 25px;" text="Volver" />
+         </children></VBox>
    </left>
    <center>
-      <Pane fx:id="pc" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <Pane prefHeight="7.0" prefWidth="5.0" BorderPane.alignment="CENTER">
          <children>
-            <Pane layoutX="1.0" layoutY="2.0" prefHeight="717.0" prefWidth="897.0" />
             <Pane layoutX="8.0" layoutY="25.0" prefHeight="680.0" prefWidth="937.0" style="-fx-background-color: #ffffff; -fx-background-radius: 25px;">
                <children>
-                  <Pane layoutX="24.0" layoutY="67.0" prefHeight="9.0" prefWidth="880.0" style="-fx-background-radius: 30px;" styleClass="backgroundColor" stylesheets="@../background.css" />
-                  <Label alignment="CENTER" layoutX="305.0" layoutY="27.0" prefHeight="45.0" prefWidth="325.0" text="AGREGAR MEDICO">
+                  <Label alignment="CENTER" layoutX="364.0" layoutY="26.0" text="Añadir medicos">
                      <font>
-                        <Font name="Arial Black" size="30.0" />
+                        <Font name="Arial Black" size="26.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="setNombre" layoutX="98.0" layoutY="154.0" prefHeight="26.0" prefWidth="250.0" />
-                  <TextField fx:id="setIdentificacion" layoutX="126.0" layoutY="230.0" prefHeight="26.0" prefWidth="221.0" />
-                  <Label layoutX="45.0" layoutY="158.0" text="Nombre:" />
-                  <Label layoutX="45.0" layoutY="234.0" text="Identificación:" />
-                  <Label layoutX="396.0" layoutY="158.0" text="Especialidad:" />
-                  <TableView fx:id="tblPacientesAgr" layoutX="34.0" layoutY="299.0" prefHeight="349.0" prefWidth="871.0" style="-fx-background-color: #ffffff;">
-                     <columns>
-                        <TableColumn fx:id="colIdentificacion" prefWidth="114.0" text="Identificacion" />
-                        <TableColumn fx:id="colNombre" prefWidth="202.0" text="Nombre" />
-                        <TableColumn fx:id="colTelefono" minWidth="2.0" prefWidth="149.0" text="Telefono" />
-                        <TableColumn fx:id="colEspecialidad" minWidth="0.0" prefWidth="257.0" text="especialidad" />
-                        <TableColumn fx:id="colCitas" prefWidth="131.0" text="Numero de Citas" />
-                     </columns>
+                  <TableView fx:id="tblMedicosAg" layoutX="30.0" layoutY="279.0" prefHeight="352.0" prefWidth="890.0">
+                    <columns>
+                      <TableColumn fx:id="identificacion" prefWidth="136.0" text="Identificación" />
+                      <TableColumn fx:id="nombre" prefWidth="171.0" text="Nombre" />
+                        <TableColumn fx:id="telefono" prefWidth="143.0" text="Telefono" />
+                        <TableColumn fx:id="especialidad" prefWidth="238.0" text="Especialidad" />
+                        <TableColumn fx:id="numerodecitas" prefWidth="169.0" text="Numero de Citas" />
+                    </columns>
                   </TableView>
-                  <Button layoutX="399.0" layoutY="226.0" mnemonicParsing="false" onAction="#btnAñadirMedico" prefHeight="56.0" prefWidth="283.0" style="-fx-background-radius: 15px;" styleClass="backgroundColor3" stylesheets="@../background.css" text="AÑADIR MEDICO" textFill="#6b6b6b">
-                     <font>
-                        <Font name="Avenir Black" size="13.0" />
-                     </font>
-                  </Button>
-                  <ImageView fitHeight="186.0" fitWidth="197.0" layoutX="714.0" layoutY="119.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../Image/pacient.png" />
-                     </image>
-                  </ImageView>
-                  <ChoiceBox fx:id="setespecialidad" layoutX="470.0" layoutY="154.0" prefHeight="26.0" prefWidth="212.0" />
-                  <Label layoutX="45.0" layoutY="196.0" text="Telefono:" />
-                  <TextField fx:id="setTelefono" layoutX="100.0" layoutY="192.0" prefHeight="26.0" prefWidth="248.0" />
-               </children>
-            </Pane>
-            <Pane layoutX="32.0" layoutY="43.0" prefHeight="9.0" prefWidth="880.0" style="-fx-background-radius: 30px;" styleClass="backgroundColor" stylesheets="@../background.css" />
-         </children>
-      </Pane>
+                  <Label layoutX="78.0" layoutY="127.0" text="Nombre" />
+                  <Label layoutX="75.0" layoutY="165.0" text="Telefono:" />
+                  <Label layoutX="78.0" layoutY="204.0" text="Identificación:" />
+                  <TextField fx:id="setNombre" layoutX="162.0" layoutY="123.0" />
+                  <TextField fx:id="setTelefono" layoutX="162.0" layoutY="160.0" />
+                  <TextField fx:id="setIdentificacion" layoutX="162.0" layoutY="200.0" />
+                  <Label layoutX="397.0" layoutY="112.0" text="Especialidad:" />
+                  <Button layoutX="406.0" layoutY="161.0" mnemonicParsing="false" onAction="#btnIngresar" prefHeight="85.0" prefWidth="269.0" text="Ingresar" />
+                  <TextField fx:id="setEspecialidad" layoutX="483.0" layoutY="110.0" />
+               </children></Pane>
+         </children></Pane>
    </center>
-   <stylesheets>
-      <URL value="@../pacientes_funciones/background.css" />
-      <URL value="@../background.css" />
-   </stylesheets>
 </BorderPane>
